# baken-kaigi

./: .gitignore  CLAUDE.md  README.md  TODO_issues.md  amplify.yml  pyproject.toml  suggestion.md
.claude/: ralph-loop.local.md  settings.json
.claude/agents/: frontend-mapper.md  tdd-generator.md
.claude/docs/: aws-operations.md  git-workflow.md  hook-test.md
.claude/hooks/: post-tool-use.sh  pre-tool-use-block-main-bash.sh  pre-tool-use-block-main-edit-write.sh  pre-tool-use-block-pr-operations.sh  track-usage.sh
.claude/scripts/: usage-report.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  improvement.yml
.github/workflows/: ci.yml  deploy.yml
aidlc-docs/inception/: epics.md  mvp_scope.md  user_personas.md  user_stories.md
backend/: agentcore_handler.py  requirements.txt
backend/agentcore/: .bedrock_agentcore.yaml  .gitignore  agent.py  requirements.txt  response_utils.py  tool_router.py
backend/batch/: __init__.py  ai_shisu_scraper.py  auto_bet_executor.py  auto_bet_orchestrator.py  daily_speed_index_scraper.py  dynamodb_utils.py  hrdb_client.py  hrdb_common.py  hrdb_constants.py  hrdb_horses_sync.py  hrdb_jockeys_sync.py  hrdb_race_scraper.py  hrdb_races_scraper.py  hrdb_results_sync.py  hrdb_runners_scraper.py  hrdb_trainers_sync.py  jiro8_speed_index_scraper.py  jra_checksum_updater.py  keiba_ai_athena_scraper.py  keiba_ai_navi_scraper.py  keibagrant_scraper.py  kichiuma_scraper.py  muryou_keiba_ai_scraper.py  umamax_scraper.py
backend/src/: __init__.py
backend/tests/: test_agentcore_handler.py  test_agentcore_handler_usage.py  test_jravan_client.py
cdk/: app.py  cdk.json
cdk/batch_layer/: requirements.txt
cdk/cdk.out/: BakenKaigiApiStack.assets.json  BakenKaigiApiStack.template.json  manifest.json  tree.json
cdk/lambda_layer/: requirements.txt
cdk/stacks/: __init__.py  api_stack.py  batch_stack.py  github_oidc_stack.py  hrdb_tables_stack.py  jravan_server_stack.py  monitoring_stack.py
cdk/tests/: test_api_stack.py  test_batch_stack.py  test_ec2_scheduler.py  test_github_oidc_stack.py
docs/: bet-proposal-logic.md  grand_design.md  hosting.md
docs/plans/: 2026-02-13-hrdb-api-migration-design.md  2026-02-13-hrdb-api-migration-plan.md  2026-02-14-agent-bet-generation-design.md  2026-02-14-agent-bet-generation-plan.md  2026-02-14-agent-settings-redesign.md  2026-02-14-budget-allocation-redesign.md  2026-02-14-cart-improvement-design.md  2026-02-20-auto-betting-plan.md  (+13 more)
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
jravan-api/: .env.example  README.md  database.py  debug_ra_record.py  ipat_executor.py  jra_checksum_scraper.py  jvlink_client.py  main.py  requirements.txt  run.bat  sync_jvlink.py
mock/: app.js  index.html  styles.css
scripts/: bundle-agentcore.sh  pre-deploy-check.sh
(+629 files in other folders)
