[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baken-kaigi"
version = "0.1.0"
description = "競馬AI相談システムのドメインモデル"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.0.0",
    "boto3>=1.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
