[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baken-kaigi"
version = "0.1.0"
description = "競馬AI相談システムのドメインモデル"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.0.0",
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pdfplumber>=0.11.0",
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "locust>=2.20.0",
    "boto3-stubs[dynamodb]>=1.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
